--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+ /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
     margin: 0;
@@ -26,4 +26,19 @@ background-color: black;
     color: #e3e6e8;
     cursor: pointer;
     
-  } 
+  }  */
+
+
+  body {background: #000}
+
+#div1 {position:relative; width:550px; height:550px; margin: 70px auto 0;
+ }
+#div1 a {position:absolute; top:10px; left:0px; font-family: Microsoft YaHei; color:#fff; font-weight:bold; text-decoration:none; padding: 3px 6px; }
+#div1 a:hover {border: 1px solid #eee; background: #000; }
+#div1 .blue {color:blue;}
+#div1 .red {color:red;}
+#div1 .yellow {color:yellow;}
+
+p { font: 16px Microsoft YaHei; text-align: center; color: #ba0c0c; }
+p a { font-size: 14px; color: #ba0c0c; }
+p a:hover { color: red; }
