--- a/style.css
+++ b/style.css
@@ -1,13 +1,57 @@
-body {background: #000}
+body {
+    background: radial-gradient(circle, rgba(228, 26, 46, 0.5) 0%, rgba(255,255,255,0),
+    rgba(62, 25, 224, 0.5) 100%);
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+}
 
-#div1 {position:relative; width:550px; height:550px; margin: 70px auto 0;
- }
-#div1 a {position:absolute; top:10px; left:0px; font-family: Microsoft YaHei; color:#fff; font-weight:bold; text-decoration:none; padding: 3px 6px; }
-#div1 a:hover {border: 1px solid #eee; background: #000; }
-#div1 .blue {color:blue;}
-#div1 .red {color:red;}
-#div1 .yellow {color:yellow;}
+#div1 {
+    position: relative;
+    width: 500px;
+    height: 500px;
+    margin: 70px auto 0;
+    display: flex;
+    flex-wrap: wrap;
+}
 
-p { font: 16px Microsoft YaHei; text-align: center; color: #ba0c0c; }
-p a { font-size: 14px; color: #ba0c0c; }
-p a:hover { color: red; }
+#div1 a {
+    position: absolute;
+    top: 10px;
+    left: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #464040;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 3px 6px;
+}
+
+#div1 a:hover {
+    color: #fff;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+@keyframes lightExplosion {
+    0% {
+        transform: scale(1);
+        opacity: 0.8;
+        box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.8);
+        background-color: rgba(244, 243, 243, 0.5);
+    }
+    100% {
+        transform: scale(3);
+        opacity: 0;
+        box-shadow: 0 0 20px 20px rgba(255, 255, 255, 0);
+        background-color: rgba(255, 255, 255, 0);
+    }
+}
+
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation: lightExplosion 1s linear infinite;
+}
